# docs/swagger.yaml
@@ -52,6 +52,59 @@ definitions:
       type:
         type: string
     type: object
+  response.LMStudioV1Capabilities:
+    properties:
+      trained_for_tool_use:
+        type: boolean
+      vision:
+        type: boolean
+    type: object
+  response.LMStudioV1ListResponse:
+    properties:
+      models:
+        items:
+          $ref: '#/definitions/response.LMStudioV1Model'
+        type: array
+    type: object
+  response.LMStudioV1LoadedInstance:
+    properties:
+      id:
+        type: string
+    type: object
+  response.LMStudioV1Model:
+    properties:
+      architecture:
+        type: string
+      capabilities:
+        $ref: '#/definitions/response.LMStudioV1Capabilities'
+      display_name:
+        type: string
+      format:
+        type: string
+      key:
+        type: string
+      loaded_instances:
+        items:
+          $ref: '#/definitions/response.LMStudioV1LoadedInstance'
+        type: array
+      max_context_length:
+        type: integer
+      params_string:
+        type: string
+      publisher:
+        type: string
+      quantization:
+        $ref: '#/definitions/response.LMStudioV1Quantization'
+      size_bytes:
+        type: integer
+      type:
+        type: string
+    type: object
+  response.LMStudioV1Quantization:
+    properties:
+      name:
+        type: string
+    type: object
   response.OllamaModel:
     properties:
       capabilities:
@@ -178,6 +231,18 @@ paths:
       summary: Get details of a specific model by ID
       tags:
       - lm-studio
+  /api/v1/models:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.LMStudioV1ListResponse'
+      summary: List available models (native v1 API)
+      tags:
+      - lm-studio
   /api/version:
     get:
       produces:
@@ -223,8 +288,6 @@ paths:
       tags:
       - openai
 securityDefinitions:
-  BasicAuth:
-    type: basic
   Bearer:
     description: Generated by /authentication
     in: header
